# aoc2023

./: Cargo.toml  README.md  session.json.example
common/: Cargo.toml
common/src/: lib.rs
day1/: part2.md
day1/src/: main.rs
day2/: Cargo.toml  part1.md  part2.md
day2/src/: main.rs
mycli/: Cargo.toml
mycli/src/: main.rs
