[package]
name = "mycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.8"
